feat: pictures on server, string modified

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 # Active profile
 spring.profiles.active=@activatedProperties@
+
+s3.bucket.url=https://s3.us-west-2.amazonaws.com/les-marteaux-patissiers.etml.es/
