--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 spring.profiles.active=@activatedProperties@
 
 s3.bucket.url=https://s3.us-west-2.amazonaws.com/les-marteaux-patissiers.etml.es/
+
+cors.allowedOrigins=http://localhost:8081
+cors.allowedMethods=GET,POST,PUT,DELETE
+cors.allowedHeaders=*
+cors.allowCredentials=true
+
